kubernetes/apps/apps/development/gitea/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
  namespace: development
  annotations:
    external-dns.alpha.kubernetes.io/controller: ignore
    external-dns.kubernetes.io/controller: ignore
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gitea
          namespace: development
          port: 22
